# proyeccion-ballotage-argentina-23

./: collab.ipynb  collab_proyeccion_ballotage.ipynb  elec.ipynb  nodes.csv  pyproject.toml
